<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AcompanhamentoActivity">

    <RelativeLayout
        android:id="@+id/header"
        style="@style/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_acompanhamento"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_above="@id/bar_total"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="17dp"
                    android:padding="8dp"
                    android:text="@string/batata_frita"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/preco_batata_frita"
                    android:textAlignment="center" />

                <Button
                    style="@style/button"
                    android:onClick="delBatataFrita"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantidade_batata_frita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/valor" />

                <Button
                    style="@style/button"
                    android:onClick="addBatataFrita"
                    android:text="+" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="0dp"
                    android:padding="8dp"
                    android:text="@string/batata_rustica"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/preco_batata_rustica"
                    android:textAlignment="center" />

                <Button
                    style="@style/button"
                    android:onClick="delBatataRustica"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantidade_batata_rustica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/valor" />

                <Button
                    style="@style/button"
                    android:onClick="addBatataRustica"
                    android:text="+" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/batata_chips"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/preco_batata_chips"
                    android:textAlignment="center" />

                <Button
                    style="@style/button"
                    android:onClick="delBatataChips"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantidade_batata_chips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/valor" />

                <Button
                    style="@style/button"
                    android:onClick="addBatataChips"
                    android:text="+" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bar_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/total"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/retornar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/footer_retornar"
                style="@style/footer"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/proximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/footer_proximo"
                style="@style/footer"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>