<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SanduicheActivity">

    <RelativeLayout
        android:id="@+id/header"
        style="@style/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_sanduiche" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:layout_above="@id/bar_total"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="22dp"
                    android:padding="8dp"
                    android:text="@string/hamburguer"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:textAlignment="center"
                    android:text="@string/preco_hamburguer"
                     />

                <Button
                    style="@style/button"
                    android:onClick="delHamburguer"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantidade_hamburguer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/valor"/>

                <Button
                    style="@style/button"
                    android:onClick="addHamburguer"
                    android:text="+" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="32dp"
                    android:padding="8dp"
                    android:text="@string/sanduiche"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/preco_sanduiche"
                    android:textAlignment="center" />

                <Button
                    style="@style/button"
                    android:onClick="delSanduiche"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantidade_sanduiche"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    style="@style/button"
                    android:onClick="addSanduiche"
                    android:text="+" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:layout_marginRight="0dp"
                    android:text="@string/cachorro_quente"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/preco_cachorro_quente"
                    android:textAlignment="center" />

                <Button
                    style="@style/button"
                    android:onClick="delCachorroQuente"
                    android:text="-" />

                <TextView
                    android:id="@+id/quantidade_cachorro_quente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <Button
                    style="@style/button"
                    android:onClick="addCachorroQuente"
                    android:text="+" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bar_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/total"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/retornar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/footer_retornar"
                style="@style/footer"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/proximo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/footer_proximo"
                style="@style/footer"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>